curso-k8s/modulo-10-kong/manifests/00-namespace-games.yaml
# Namespace dedicado para a aplicação (isolamento lógico)
apiVersion: v1
kind: Namespace
metadata:
  name: games
  labels:
    name: games
